# plaster-calculator

./: .firebaserc  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  dataconnect.yaml  eslint.config.mjs  firebase.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  storage.cors.json  storage.rules  tsconfig.base.json  tsconfig.build.json  web-dev.err
functions/floorplan-analyzer/: main.py  pyproject.toml  requirements.txt
functions/floorplan-analyzer/analysis/: schemas.py  service.py
functions/floorplan-analyzer/analysis/strategies/: ocr_flood_fill.py  ocr_flood_fill_smoothed.py  xixi.py
functions/floorplan-analyzer/api/: request.py  response.py
functions/floorplan-analyzer/cubicasa_api/: ocr_flood_fill.py  ocr_flood_fill_smoothed.py  xixi.py
functions/floorplan-analyzer/cubicasa_core/: __init__.py  inference.py  overlay.py  postprocess.py  preprocess.py  result.py
functions/floorplan-analyzer/cubicasa_core/strategies/: __init__.py  autocrop.py  base.py  baseline.py  (+5 more)
functions/floorplan-analyzer/examples/: smoke_test.py
functions/floorplan-analyzer/floortrans/: post_prosessing.py
functions/floorplan-analyzer/inference/: model.py  overlay.py  pipeline.py  preprocess.py  schemas.py  service.py
functions/floorplan-analyzer/ocr/: keywords.py  schemas.py  service.py
functions/floorplan-analyzer/segmentation/: postprocess.py  result.py  schemas.py  service.py
functions/floorplan-analyzer/tests/: test_ocr_flood_fill_smoothed.py  test_ocr_service.py
(+744 files in other folders)
