[project]
name = "floorplan_analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "firebase-functions>=0.5.0",
    "firebase-admin>=7.4.0",
    "google-cloud-firestore>=2.27.0",
    "torch>=2.12.0",
    "numpy>=2.4.5",
    "scipy>=1.17.1",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "svgpathtools>=1.7.2",
    "lmdb>=2.2.0",
    "pillow>=12.2.0",
    "opencv-python-headless>=4.13.0.92",
    "scipy-stubs~=1.17.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
