[project]
name = "floorplan_analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "firebase-functions>=0.5.0",
    "firebase-admin>=7.4.0",
    "google-cloud-firestore>=2.27.0",
    "torch>=2.7.0",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
    "scikit-image>=0.25.2",
    "shapely>=2.1.0",
    "svgpathtools>=1.6.1",
    "lmdb>=1.6.2",
    "pillow>=11.2.1",
    "opencv-python-headless>=4.11.0.86",
    "scipy-stubs~=1.17.1",
    "easyocr>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
